--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -12,17 +12,18 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14.5.0
-      - run: npm install
       - run: |
+          npm install
           npx rollup -c example/rollup.config.mjs
-          mkdir -p components/svelte-guard-history-router
-          cp -R example/public/* components/svelte-guard-history-router
+          mkdir -p build/components/svelte-guard-history-router
+          cp -R example/public/* build/components/svelte-guard-history-router
       -
         name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
+          build_dir: build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
