feat: add svelte-common

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,8 +17,18 @@ jobs:
           npx rollup -c example/rollup.config.mjs
           mkdir -p build/components/svelte-guard-history-router/example
           cp -R example/public/* build/components/svelte-guard-history-router/example
-      -
-        name: Deploy to GitHub Pages
+      - uses: actions/checkout@v2
+        with:
+          repository: 'arlac77/svelte-common'
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14.5.0
+      - run: |
+          npm install
+          npx rollup -c example/rollup.config.mjs
+          mkdir -p build/components/svelte-common/example
+          cp -R example/public/* build/components/svelte-common/example
+      - name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
         with:
