--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -10,6 +10,7 @@ jobs:
         with:
           repository: 'arlac77/svelte-guard-history-router'
           path: build/components/svelte-guard-history-router
+          clean: false
       - uses: actions/setup-node@v1
         with:
           node-version: 14.5.0
@@ -21,6 +22,7 @@ jobs:
         with:
           repository: 'arlac77/svelte-common'
           path: build/components/svelte-common
+          clean: false
       - uses: actions/setup-node@v1
         with:
           node-version: 14.5.0
