--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,7 +25,7 @@ jobs:
           do
             (cd build/$c;npm install;npx rollup -c example/rollup.config.mjs)
             mkdir -p build/components/$c/example
-            cp -R build/$c/example/public build/components/$c/example
+            cp -R build/$c/example/public/* build/components/$c/example
             rm -rf build/$c
           done
       - name: Deploy to GitHub Pages
