--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,6 +8,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          repository: 'arlac77/svelte-log-view'
+          path: build/svelte-log-view
+          clean: false
+      - uses: actions/checkout@v2
+        with:
+          repository: 'arlac77/svelte-session-manager'
+          path: build/svelte-session-manager
+          clean: false
+      - uses: actions/checkout@v2
+        with:
           repository: 'arlac77/svelte-guard-history-router'
           path: build/svelte-guard-history-router
           clean: false
@@ -20,7 +30,7 @@ jobs:
         with:
           node-version: 14.5.0
       - run: |
-          COMPONENTS="svelte-common svelte-guard-history-router"
+          COMPONENTS="svelte-log-view svelte-session-manager svelte-common svelte-guard-history-router"
           for c in $COMPONENTS
           do
             echo '****** ' $c ' ******'
