--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,29 +8,34 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          repository: 'arlac77/svelte-log-view'
+          repository: arlac77/svelte-log-view
           path: build/svelte-log-view
           clean: false
       - uses: actions/checkout@v2
         with:
-          repository: 'arlac77/svelte-session-manager'
+          repository: arlac77/svelte-session-manager
           path: build/svelte-session-manager
           clean: false
       - uses: actions/checkout@v2
         with:
-          repository: 'arlac77/svelte-guard-history-router'
+          repository: arlac77/svelte-guard-history-router
           path: build/svelte-guard-history-router
           clean: false
       - uses: actions/checkout@v2
         with:
-          repository: 'arlac77/svelte-common'
+          repository: arlac77/svelte-common
           path: build/svelte-common
+          clean: false
+      - uses: actions/checkout@v2
+        with:
+          repository: arlac77/websocket-store
+          path: build/websocket-store
           clean: false
       - uses: actions/setup-node@v1
         with:
           node-version: 14.5.0
       - run: |
-          COMPONENTS="svelte-log-view svelte-session-manager svelte-common svelte-guard-history-router"
+          COMPONENTS="svelte-websocket-store svelte-log-view svelte-session-manager svelte-common svelte-guard-history-router"
           for c in $COMPONENTS
           do
             echo '****** ' $c ' ******'
